[project]
name = "rag-for-duodecim"
version = "0.1.0"
description = "RAG pipeline for querying the Finnish Terveyskirjasto health library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "asyncio>=3.4.3",
    "crawl4ai>=0.6.3",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.2.4",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.44.0",
]
